@@ -67,6 +67,7 @@
             <file>./../plugins/help/tests/Help.php</file>
             <file>./../plugins/hide_blockquote/tests/HideBlockquote.php</file>
             <file>./../plugins/http_authentication/tests/HttpAuthentication.php</file>
+            <file>./../plugins/identicon/tests/Identicon.php</file>
             <file>./../plugins/identity_select/tests/IdentitySelect.php</file>
             <file>./../plugins/jqueryui/tests/Jqueryui.php</file>
             <file>./../plugins/krb_authentication/tests/KrbAuthentication.php</file>
